Closed Bug 1375429 Opened 7 years ago Closed 7 years ago

[e10s] Regression: No focus events fired on menu items in pull down menus off the main menu bar

Categories

(Core :: Disability Access APIs, defect)

56 Branch
x86
Windows 10
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- fixed

People

(Reporter: MarcoZ, Assigned: bugzilla)

References

Details

(Keywords: regression, Whiteboard: aes+)

Attachments

(1 file)

This is a regression introduced in the first of the 2017-06-21 nightly builds, and was not resolved by whatever it was that triggered the second nightly. I mentioned it in the meeting on Wednesday that I no longer get speech from menus. Using Nightly and NVDA: 1. Press Alt to open the menu bar. 2. Press DownArrow to pop into the File menu. Expected: You should hear the New Tab menu item spoken. And sometimes, this does happen. But often, this is already where the bug reproduces. If you hear it, just continue to press DownArrow. Actual: The menu items are not spoken. But they are there in the tree, so it is the focus events that are missing. The 2017-06-20 build was still OK. No other settings have changed between the two builds from my end.
Popups don't pass the IsRoot check, but we still need to return them. In that case, we should just use the regular Accessible::GetNativeInterface machinery.
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Attachment #8880526 - Flags: review?(eitan)
Attachment #8880526 - Flags: review?(eitan) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/dd94feefcb7467ef48828befa6d0cccfee3e340e Bug 1375429: Ensure that a11y::LazyInstantiator::GetRootAccessible properly handles popup accessibles; r=eeejay
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: