Bug 1375429: Ensure that a11y::LazyInstantiator::GetRootAccessible properly handles popup accessibles; r=eeejay

MozReview-Commit-ID: CFlNI1wXFG3